--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Incubit</title>
-    <%= csrf_meta_tags %>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="robots" content="noindex, nofollow">
+  <title><%= yield :title %></title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= javascript_include_tag('application') %>
+  <%= stylesheet_link_tag('application', :media => 'all') %>
+  <%= csrf_meta_tags %>
+</head>
 
-  <body>
-    <%= yield %>
-  </body>
+<body>
+
+<div class="container">
+  <% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %> mt-3"><strong><%= message_type.capitalize %>!</strong> <%= message %></div>
+  <% end %>
+  <%= yield %>
+</div>
+
+<footer class="text-muted">
+  <hr>
+  <div class="container pb-3">
+    <div class="row">
+      <div class="col-md-12">
+        &copy; copyright <%= Time.current.year.to_s %>
+      </div>
+    </div>
+  </div>
+</footer>
+
+</body>
 </html>
