--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,30 @@
 @import "bootstrap-variables";
 @import "bootstrap";
 
+// Title font
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+
+body {
+  margin-bottom: 60px;
+}
+
+.navbar-brand {
+  padding: 0;
+  font-family: 'Lobster', cursive;
+  font-size: 1.8em;
+  color: #fff;
+}
+
+.container {
+  width: auto;
+  padding: 0 15px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
