--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
 
 <body>
 
+<%= render 'shared/navigation' %>
+
 <div class="container">
   <% flash.each do |message_type, message| %>
     <div class="alert alert-<%= message_type %> mt-3"><strong><%= message_type.capitalize %>!</strong> <%= message %></div>
@@ -21,13 +23,8 @@
 </div>
 
 <footer class="text-muted">
-  <hr>
-  <div class="container pb-3">
-    <div class="row">
-      <div class="col-md-12">
-        &copy; copyright <%= Time.current.year.to_s %>
-      </div>
-    </div>
+  <div class="container">
+    &copy; copyright <%= Time.current.year.to_s %>
   </div>
 </footer>
 
