--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, url: register_path) do |f| %>
-      <%= render 'shared/alert' %>
+      <%= render 'shared/alert', object: @user %>
 
       <div class="form-group">
       <%= f.label :email %>
