--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -6,18 +6,21 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Register</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Edit</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
-      </li>
+      <% if logged_in? && current_user %>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= edit_user_path(current_user) %>">Edit</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= logout_path %>">Logout</a>
+        </li>
+      <% else %>
+        <li class="nav-item active">
+          <a class="nav-link" href="<%= register_path %>">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= login_path %>">Login</a>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
