--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,21 +7,23 @@
       <%= render 'shared/alert', object: @user %>
 
       <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+        <%= f.label :email %>
+        <%= f.email_field :email, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+        <%= f.label :password %>
+        <%= f.password_field :password, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-      <%= f.label :password_confirmation, "Password again" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <%= f.label :password_confirmation, "Password again" %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
       <%= f.submit "Submit", class: "btn btn-primary" %>
     <% end %>
+
+    <p class="mt-3">Already registered? <%= link_to "Login here", login_path %>.</p>
   </div>
 </div>
