--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -6,9 +6,9 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <% if logged_in? && current_user %>
+      <% if is_logged_in? && current_user %>
         <li class="nav-item">
-          <a class="nav-link" href="<%= edit_user_path(current_user) %>">Edit</a>
+          <a class="nav-link" href="<%= edit_user_path(current_user) %>">My Profile</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="<%= logout_path %>">Logout</a>
